# velari-studios-ainative

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: advanced-workflow.yml  basic-workflow.yml  claude.yml  first-workflow.yml  label-issues-task.yml  python-ci-agent.lock.yml  python-ci-agent.md  python-workflow.yml
config/: config.yaml  logging.yaml
config/experimentation/: experiment.yaml
config/runtime/: python.env  runtime.env
examples/: hydra_config.py  hydra_config_example.py
tests/: test_hydra_config.py  test_velari.py
velari/: __init__.py  version.py
velari_github_workflows.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
